Predicting Drop outs #1
adjusted text on trees

--- a/content/post/2021-06-29-predicting-high-school-graduation-from-kindergarten-data-basic-decision-trees-part-1/index.en.Rmd
+++ b/content/post/2021-06-29-predicting-high-school-graduation-from-kindergarten-data-basic-decision-trees-part-1/index.en.Rmd
@@ -149,13 +149,13 @@ star_forest <- rand_forest(
 star_metrics <- metric_set(accuracy, roc_auc, sens, spec)
 ```
 
-Because decision trees do most of the work in the analysis, we say a little more about them. 
+Because decision trees do most of the work in the analysis, we say a little more about how they are made. This helps us understand what we are doing when we tune hyperparameters and how to interpret so called roc curves later on.  
 
-In a basic decision tree, the main idea is to split the data points up in sections, using all the predictors. So for the first split you make a cut at those who have free lunch, are male, scores lower than 20 points on a reading test, and so on. You hope that drop outs and graduates (the labels you predict) are already nicely separated into the two spaces (or boxes) that you made. But they probably aren't yet. So in each box you try to find new lines to split the data points on. And so on.
+In a decision tree, you split the outcome values into two boxes based on one of your predictors. You then split the outcome values in each of the boxes based on another predictor. And so on. So the first split in our case could be between those who have free lunch and those who do not have a free lunch at school. 
 
-How does the algorithm choose the point at which to make a cut? Unless variables are continuous, it simple tries all the options. It then looks at a measure of the 'purity' inside the boxes it has made. You want data points to neatly fall in either box, so each box is pure. This can be measured by [impurity functions](https://youtu.be/a3ioGSwfVpE?list=PLl8OlHZGYOQ7bkVbuRthEsaLr7bONzbXS) such as gini or entropy. The engines in this post happen to use gini, which you may know from measurements of inequality. In the case of two classes, it multiplies the proportion of each in a box together. The resulting value has a maximum for proportions of 0.5. This is indeed the worse you can do if your goal is to make boxes pure! 
+The algorithm must make two decision at each cut. Which predictor to pick and at which point to make a cut? The solution is not very elegant. Unless variables are continuous, the algorithm simply tries every possible cut for each predictor. It then assign a value to each of the (n dimensions times k predictors) cuts that measures how 'pure' the boxes are. You want data points to neatly fall in either box, so that each box is pure. This can be measured by [impurity functions](https://youtu.be/a3ioGSwfVpE?list=PLl8OlHZGYOQ7bkVbuRthEsaLr7bONzbXS) such as gini or entropy. The engines in this post happen to use gini, which you may know from measurements of inequality. In the case of two classes, it multiplies the proportion of each in a box together. The resulting value has a maximum for proportions of 0.5. This is indeed the worse you can do if your goal is to make boxes pure! 
 
-If you put no limitations and this algorithm, it will keep drawing boxes around graduates and drop out, until there is a box around every outcome measure. This is unfortunate, because we have molded our model too much to the training data. We have overfit. Hence there is bias. If we applied this model to the test data set, we would probably get very poor predictions.
+If you put no limitations and this algorithm, it will keep drawing boxes around graduates and drop outs, until there is a box around every outcome measure. This is unfortunate, because we have molded our model too much to the training data. We have overfit. Hence there is bias. If we applied this model to the test data set, we would probably get very poor predictions.
 
 Putting breaks on the splitting process is a type of so called regularization. It can be done in several ways, such as limiting the number of leafs of the tree, limiting tree depth or setting a minimal size for the nodes (the final subsets). The defaults for these hyperparameters (hyper because they control the splitting criteria, which are the parameters) depend on the package. In the `rpart` engine for example, the maximum tree depth is 30 and the minimal number of cases per node is 20. There is also a cost-complexity parameter cp that penalizes splits, so the tree doesn't grow too wildly. 
 
@@ -214,7 +214,8 @@ The dashed diagonal line represents what would happen if you labeled cases by ch
 By looking at the graph or the roc_auc number in the table, we conclude that we have done a little better than chance. The task ahead then is to improve both the roc_auc number and the specificity. 
 
 ### Decision Trees using Resampled Data
-One way to deal with the low specificity of our model would be to change the threshold for labeling the points as YES in a box. If this threshold is lower, then more points are labeled NO, and we probably catch more drop outs in our prediction. However, as the roc curve shows, there is trade off with sensitivity. So what we really want is improve the quality of the prediction and get a better roc_auc score. 
+One way to deal with the low specificity of our model would be to change the threshold for labeling the points as YES in a box. If this threshold is lower, then more points are labeled NO, and we probably catch more drop outs in our prediction. However, as the roc curve shows, there is trade off with sensitivity. So what we really want is improve the quality of the prediction and get a better roc_auc score.
+
 We do so by writing a so called tidymodels 'recipe' for handling the data before it is shoved into a model. The recipe start with setting up the formula. We then impute modes and medians for missing data, because it is fast. If we had more time, we would impute using techniques such as bagged trees or k nearest neighbors. We moreover use the smote algorithm to upsample kids who dropped out of high school with the help of nearest neighbors. Such kids are quite rare in the initial data set so that it is said that this data set is "imbalanced". Also, identifying drop outs is what we are really interested in, so it makes sense to give the model more cases to train on. We also do some steps that prove useful for more advanced models and for prediction on the test data set.
 
 ```{r warning=F, message=F}
